docs(readme): updated with v2.1.0 features (chat games & bug fixes)